--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -2,10 +2,14 @@
     & > span{
         display: block;
         margin-top: 5px;
+        margin-bottom: 5px;
+        font-size: 17px;
+        font-weight: bold;
     }
     &__info{
         width: auto;
         outline: none;
+        margin-bottom: 5px;
         background-color: #e6a146;
         border:black;
         padding: 5px;
@@ -28,4 +32,7 @@
     }
     margin: 10px auto;
     text-align: center;
+    border: 3px solid #ff9100;
+    border-radius: 3px;
+    background-color: wheat;
 }
