--- a/src/components/modalwindow/modalwindow.scss
+++ b/src/components/modalwindow/modalwindow.scss
@@ -12,6 +12,7 @@
     box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2); 
     text-align: center;
     padding: 30px;
+    border: 3px solid #ff9100;
     border-radius: 3px;
     background-color: wheat;
     transition: 0.3s all;
